--- a/todo.txt
+++ b/todo.txt
@@ -15,6 +15,8 @@ Registro financeiro(Pagamento de salarios,  Recebimento de mensalidade)
 
 Registro individual do aluno
 
+Registro coletivo dos alunos
+
 --- Refatoração ---
 Comentar Codigo
 
